# vneevents

./: .clang-tidy  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CODING_GUIDELINES.md  README.md  codecov.yml
.copilot/: coding-guidelines.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/codeql/: codeql-config.yml
.github/docs/: release-please-publish.md
.github/workflows/: ci.yml  codeql.yml  delete-merged-branch.yml  release-please.yml
cmake/: Doxygen.cmake  FindCoverage.cmake  FindVneEvents.cmake  VneEventsConfig.cmake.in  VneUseDep.cmake
docs/: README.md  doxyfile.in
docs/events/: events.md
docs/events/diagrams/: events.drawio
docs/input/: input.md
docs/input/diagrams/: input.drawio
examples/: CMakeLists.txt
examples/01_hello_events/: CMakeLists.txt  README.md  event_demo.cpp  event_demo.h  listeners.cpp  listeners.h  main.cpp
examples/02_input_polling/: CMakeLists.txt  README.md  input_demo.cpp  input_demo.h  main.cpp
examples/03_event_listeners/: CMakeLists.txt  README.md  listener_demo.cpp  listener_demo.h  listeners.cpp  listeners.h  main.cpp
examples/04_multithreaded_events/: CMakeLists.txt  README.md  listeners.cpp  listeners.h  main.cpp  threaded_demo.cpp  threaded_demo.h
examples/05_game_loop_integration/: CMakeLists.txt  README.md  game_loop_demo.cpp  game_loop_demo.h  listeners.cpp  listeners.h  main.cpp
examples/06_glfw_integration/: CMakeLists.txt  README.md  glfw_integration.cpp  glfw_integration.h  glfw_integration_demo.cpp  glfw_integration_demo.h  main.cpp
examples/06_platform_integration/: CMakeLists.txt  README.md  glfw_integration.cpp  glfw_integration.h  main.cpp  platform_demo.cpp  platform_demo.h
examples/common/: CMakeLists.txt  logging_guard.h
include/vertexnova/events/: event.h  event_bus.h  event_dispatcher.h  event_listener.h  event_manager.h  event_queue.h  events.h  export.h  key_event.h  mouse_event.h  touch_event.h  types.h  window_event.h
include/vertexnova/events/input/: input.h  input_manager.h  input_state.h
include/vertexnova/events/internal/: read_write_mutex.h
scripts/: README.md  build_ios.sh  build_linux.sh  build_macos.sh  build_web.sh  build_windows.py  build_windows.sh  check_coverage.sh  ci_artifact_detail.sh  clang_formatter.py  clang_tidy_analyzer.py  cppcheck_analyzer.py  generate-docs.sh  generate_coverage.sh  run_google_test_filter.sh  static_analyzer.py
src/vertexnova/events/: event_manager.cpp  vneevents_shared_exports.cpp
src/vertexnova/events/input/: input.cpp  input_manager.cpp  input_state.cpp
tests/: CMakeLists.txt  event_bus_test.cpp  event_queue_test.cpp  event_test.cpp  input_state_test.cpp  main.cpp
