#==============================================================================
# VneEvents Examples CMakeLists.txt
#==============================================================================

# Include common utilities directory (for include paths)
add_subdirectory(common)

# 01 - Hello Events: Basic event system usage
add_subdirectory(01_hello_events)
