#==============================================================================
# VneEvents Examples CMakeLists.txt
#==============================================================================

# Include common utilities directory (for include paths)
add_subdirectory(common)

# 01 - Hello Events: Basic event system usage
add_subdirectory(01_hello_events)

# 02 - Input Polling: Input state polling in a game loop
add_subdirectory(02_input_polling)

# 03 - Event Listeners: Multiple listeners and subsystem patterns
add_subdirectory(03_event_listeners)
